made adjustments to advancedsearch functions and some minor ui improvements

--- a/client/src/components/card.css
+++ b/client/src/components/card.css
@@ -67,6 +67,7 @@
 
 .outfit-card-link:hover {
   text-decoration: underline;
+  color: #e1a5ff;
 }
 
 .outfit-card-innerLink {
@@ -76,4 +77,5 @@
 
 .outfit-card-innerLink:hover {
   text-decoration: underline;
+  color: #e1a5ff;
 }
