--- a/client/src/App.css
+++ b/client/src/App.css
@@ -73,8 +73,8 @@
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
-  --bs-link-color: #76dcee;
-  --bs-link-hover-color: #e795ff;
+  --bs-link-color: #1b75ba;
+  --bs-link-hover-color: #853a9d;
   --bs-code-color: #e21e80;
   --bs-highlight-bg: #fff3cd;
 }
@@ -100,7 +100,7 @@ body {
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
   background: #1e30f3;
-  background: linear-gradient(135deg, #76dcee 0%, #e795ff 100%);
+  background: linear-gradient(135deg, #edd1ff 0%, #afdcff  60% 70%, #a4fff0 100%);
   background-attachment: fixed;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -112,6 +112,22 @@ hr {
   border: 0;
   border-top: 1px solid;
   opacity: 0.25;
+}
+
+.hr-medium {
+  margin: 1rem 0;
+  color: inherit;
+  border: 0;
+  border-top: 1px solid;
+  opacity: 0.5;
+}
+
+.hr-bolder {
+  margin: 1rem 0;
+  color: inherit;
+  border: 0;
+  border-top: 2px solid;
+  opacity: 0.5;
 }
 
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
@@ -8148,7 +8164,7 @@ textarea.form-control-lg {
 }
 
 .fe-shadow {
-  text-shadow: 1px 1px 10px #9cadd8, 1px 1px 10px #9cadd8;
+  text-shadow: 1px 1px 10px #ba68c8;
 }
 
 .lh-1 {
@@ -8255,12 +8271,17 @@ textarea.form-control-lg {
 
 .text-dark {
   --bs-text-opacity: 1;
-  color: rgba(var(--bs-dark-rgb), var(--bs-text-opacity)) !important;
+  color: #30298d;
 }
 
 .text-black {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-black-rgb), var(--bs-text-opacity)) !important;
+}
+
+.text-custom {
+  --bs-text-opacity: 1;
+  color: #ff4da6;
 }
 
 .text-white {
@@ -8367,6 +8388,12 @@ textarea.form-control-lg {
 .bg-transparent {
   --bs-bg-opacity: 1;
   background-color: transparent !important;
+}
+
+.bg-transparent-white {
+  background-color: rgba(255, 255, 255, 0.8); /* White with 80% opacity */
+  padding: 1.5rem; /* Adjust padding as needed */
+  border-radius: 0.5rem; /* Optional: for rounded corners */
 }
 
 .bg-opacity-10 {
