--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1766,7 +1766,7 @@ progress {
   --bs-table-bg: transparent;
   --bs-table-border-color: var(--bs-border-color);
   --bs-table-accent-bg: transparent;
-  --bs-table-striped-color: var(--bs-text-dark);
+  --bs-table-striped-color: var(--bs-);
   --bs-table-striped-bg: rgba(166, 237, 255, 0.163);
   --bs-table-active-color: var(--bs-body-color);
   --bs-table-active-bg: rgba(0, 0, 0, 0.1);
@@ -2885,20 +2885,20 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
-  --bs-btn-color: #fff;
-  --bs-btn-bg: #1e30f3;
-  --bs-btn-border-color: #1e30f3;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #1a29cf;
-  --bs-btn-hover-border-color: #1826c2;
+  --bs-btn-color: #009bde;
+  --bs-btn-bg: #009bde;
+  --bs-btn-border-color: #009bde;
+  --bs-btn-hover-color: ##009bde;
+  --bs-btn-hover-bg: #d679dd;
+  --bs-btn-hover-border-color: #d679dd;
   --bs-btn-focus-shadow-rgb: 64, 79, 245;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #1826c2;
-  --bs-btn-active-border-color: #1724b6;
+  --bs-btn-active-color: #009bde;
+  --bs-btn-active-bg: #d679dd;
+  --bs-btn-active-border-color: #d679dd;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #1e30f3;
-  --bs-btn-disabled-border-color: #1e30f3;
+  --bs-btn-disabled-color: #009bde;
+  --bs-btn-disabled-bg: #d679dd;
+  --bs-btn-disabled-border-color: #d679dd;
 }
 
 .btn-secondary {
@@ -4373,8 +4373,8 @@ textarea.form-control-lg {
 }
 
 .accordion {
-  --bs-accordion-color: #212529;
-  --bs-accordion-bg: #fff;
+  --bs-accordion-color: #1c236e;
+  --bs-accordion-bg: ##009bde;
   --bs-accordion-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
   --bs-accordion-border-color: var(--bs-border-color);
   --bs-accordion-border-width: 1px;
@@ -4393,7 +4393,7 @@ textarea.form-control-lg {
   --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(30, 48, 243, 0.25);
   --bs-accordion-body-padding-x: 1.25rem;
   --bs-accordion-body-padding-y: 1rem;
-  --bs-accordion-active-color: #1b2bdb;
+  --bs-accordion-active-color: #1c236e;
   --bs-accordion-active-bg: #e9eafe;
 }
 
